Add GitHub Actions workflow for APK & IPA build

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,19 @@
 name: green_urban_grow
-description: Auto plant scan MVP offline
+description: Auto plant scan, garden planner, shopping list app
 version: 0.0.1
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  path: ^1.8.2
   tflite_flutter: ^0.10.0
   image: ^4.0.15
-  permission_handler: ^11.0.1
+  permission_handler: ^11.2.0
+  image_picker: ^0.8.7+4
 
 flutter:
+  uses-material-design: true
   assets:
     - assets/model.tflite
     - assets/labels.txt
