Add automated APK build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,30 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: android
+    runs-on: ubuntu-24.04
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
           java-version: 17
-      - name: Build Release APK
+          distribution: temurin
+
+      - name: Build APK
+        working-directory: android
         run: ./gradlew assembleRelease
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: app/build/outputs/apk/release/app-release.apk
+          name: app-release.apk
+          path: android/app/build/outputs/apk/release/app-release.apk
