--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.greenurbangrow">
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 <uses-permission android:name="android.permission.CAMERA" />
@@ -19,4 +20,5 @@
         </activity>
     </application>
 
+</manifest>
 </manifest>
