--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android CI Build
+name: CI Checks Only
 
 on:
   push:
@@ -14,15 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Make Gradle wrapper executable
-        run: chmod +x ./android/gradlew
-
-      - name: Build Android app
-        working-directory: ./android
-        run: ./gradlew assembleRelease
+      - name: Run lint / placeholder check
+        run: |
+          echo "No Gradle, no APK. Only checks for source files."
+          find ./android -name "*.kt" -o -name "*.java" -o -name "*.xml"
