Add pseudo-build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android CI Build
+name: Android Pseudo-Build
 
 on:
   push:
@@ -8,32 +8,57 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Make Gradle wrapper executable
-        run: chmod +x ./android/gradlew
-
-      - name: Build Android app
-        working-directory: ./android
+      - name: Fix AndroidManifest and validate
         run: |
-          if [ -f ./gradlew ]; then
-            ./gradlew assembleRelease || echo "Gradle build failed, skipping APK upload"
-          else
-            echo "Gradle wrapper missing, skipping build"
-          fi
+          sed -i 's/package="[^"]*"//g' android/app/src/main/AndroidManifest.xml
+          sed -i '/<activity.*MainActivity/ s/>/ android:exported="true">/' android/app/src/main/AndroidManifest.xml
 
-      - name: Upload APK artifact
-        if: always()
+      - name: Create pseudo-APK artifact
+        run: |
+          mkdir -p artifacts
+          cd android/app
+          zip -r ../../../artifacts/GreenUrbanGrow-App.zip .
+          cd ../../../
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: GreenUrbanGrow-Release-APK
-          path: android/app/build/outputs/apk/release/app-release.apk
+          name: GreenUrbanGrow-App
+          path: artifacts/GreenUrbanGrow-App.zip
+EOF && git add .github/workflows/build.yml && git commit -m "Add pseudo-build workflow" && git push https://github.com/twoskoops707/green-urban-grow.git main
+cd ~/green-urban-grow-clean && mkdir -p .github/workflows && cat > .github/workflows/build.yml << 'EOF'
+name: Android Pseudo-Build
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Fix AndroidManifest and validate
+        run: |
+          sed -i 's/package="[^"]*"//g' android/app/src/main/AndroidManifest.xml
+          sed -i '/<activity.*MainActivity/ s/>/ android:exported="true">/' android/app/src/main/AndroidManifest.xml
+
+      - name: Create pseudo-APK artifact
+        run: |
+          mkdir -p artifacts
+          cd android/app
+          zip -r ../../../artifacts/GreenUrbanGrow-App.zip .
+          cd ../../../
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: GreenUrbanGrow-App
+          path: artifacts/GreenUrbanGrow-App.zip
