--- a/.github/workflows/build-flutter-apk.yml
+++ b/.github/workflows/build-flutter-apk.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: 3.22.4
 
       - name: Build APK
         run: flutter pub get && flutter build apk --release
