--- a/.github/workflows/disabled/build-flutter-apk.yml
+++ b/.github/workflows/disabled/build-flutter-apk.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter-actions/setup-flutter@v2
         with:
-          flutter-version: 'stable'
+          version: 3.22.4
 
       - name: Build APK
         run: flutter pub get && flutter build apk --release
