--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        <meta-data android:name="flutterEmbedding" android:value="2" />
         android:allowBackup="true"
         android:label="GreenUrbanGrow"
         android:roundIcon="@mipmap/ic_launcher_round"
