--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        <meta-data android:name="flutterEmbedding" android:value="2" />
         android:allowBackup="true"
         android:label="GreenUrbanGrow"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.GreenUrbanGrow">
-        <activity android:name=".MainActivity" android:exported="true" android:exported="true">
+        
+        <meta-data android:name="flutterEmbedding" android:value="2" />
+        
+        <activity 
+            android:name=".MainActivity" 
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
