fix: remove missing icon reference

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="GreenUrbanGrow"
-        android:icon="@mipmap/ic_launcher">
+        android:label="GreenUrbanGrow">
         
         <meta-data
             android:name="flutterEmbedding"
