--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1,29 +1,30 @@
 name: Flutter Build APK
-
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.16.9'
-
+      
       - name: Install dependencies
         run: flutter pub get
-
+      
       - name: Build Release APK
         run: flutter build apk --release --no-pub
-
+      
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
