fix: add Flutter v2 embedding metadata to AndroidManifest
- Added <meta-data android:name='flutterEmbedding' android:value='2'/>
- This fixes the deprecated Android v1 embedding error
- Should now build successfully on GitHub Actions

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
         android:label="Green Urban Grow"
         android:theme="@style/LaunchTheme">
         
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
