--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,14 @@ description: Auto plant scan, garden planner, shopping list app
 version: 0.0.1
 environment:
   sdk: ">=3.0.0 <4.0.0"
-
+  
 dependencies:
   flutter:
     sdk: flutter
-  tflite_flutter: ^0.10.0
   image: ^4.0.15
+  http: ^1.1.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/model.tflite
-    - assets/labels.txt
     - assets/care_tips.json
