feat: add iOS support
- Added basic iOS project structure with Info.plist
- Updated GitHub Actions to build both Android and iOS
- Multi-platform support from single codebase

--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1,32 +1,33 @@
-name: Flutter Build APK
+name: Flutter Build Multi-Platform
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.16.9'
-      
-      - name: Install dependencies
-        run: flutter pub get
-      
-      - name: Build Release APK
-        run: flutter build apk --release --no-pub
-      
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4
+      - run: flutter pub get
+      - run: flutter build apk --release
+      - uses: actions/upload-artifact@v4
         with:
-          name: green-urban-grow-app
+          name: green-urban-grow-android
           path: build/app/outputs/flutter-apk/app-release.apk
+
+  build-ios:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.16.9'
+      - run: flutter pub get
+      - run: flutter build ios --release --no-codesign
+      - uses: actions/upload-artifact@v4
+        with:
+          name: green-urban-grow-ios
+          path: build/ios/ipa/
