--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,14 +2,11 @@
     package="com.greenurbangrow">
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
     
     <application
         android:label="Green Urban Grow"
         android:theme="@style/LaunchTheme">
-        
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
         
         <activity
             android:name=".MainActivity"
