--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: green_urban_grow
-description: Auto plant scan, garden planner, shopping list app
-version: 0.0.1
+description: Urban gardening app for small spaces
+version: 1.0.0
 environment:
   sdk: ">=3.0.0 <4.0.0"
   
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
+  url_launcher: ^6.1.11
 
 flutter:
   uses-material-design: true
