--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1,4 +1,4 @@
-name: Flutter Build Multi-Platform
+name: Flutter Build APK
 on:
   push:
     branches: [ main ]
@@ -15,19 +15,20 @@ jobs:
       - run: flutter build apk --release
       - uses: actions/upload-artifact@v4
         with:
-          name: green-urban-grow-android
+          name: green-urban-grow-app
           path: build/app/outputs/flutter-apk/app-release.apk
 
-  build-ios:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.16.9'
-      - run: flutter pub get
-      - run: flutter build ios --release --no-codesign
-      - uses: actions/upload-artifact@v4
-        with:
-          name: green-urban-grow-ios
-          path: build/ios/ipa/
+  # iOS build commented out until proper iOS configuration is added
+  # build-ios:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: '3.16.9'
+  #     - run: flutter pub get
+  #     - run: flutter build ios --release --no-codesign
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: green-urban-grow-ios
+  #         path: build/ios/ipa/
