--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
     
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="Green Urban Grow"
         android:theme="@style/LaunchTheme">
