--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.5
-  url_launcher: ^6.0.20
+  url_launcher: ^6.0.20   # Stable with Dart 2.17
+  http: ^0.13.5           # For News Feed API
 
 flutter:
   uses-material-design: true
