Update Flutter project: restore URL launcher, Amazon links, NewsFeed, navigation, CI workflow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: green_urban_grow
-description: Urban gardening app for small spaces
 version: 1.0.0
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  
+  sdk: ">=3.0.0 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.20   # Stable with Dart 2.17
-  http: ^0.13.5           # For News Feed API
-
+  url_launcher: ^6.1.11
+  http: ^0.13.5
 flutter:
   uses-material-design: true
