--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,29 +1,14 @@
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
+    ext {
+        compileSdkVersion = 33
+        minSdkVersion = 21
+        targetSdkVersion = 33
+        kotlin_version = '1.9.0'
     }
-
+    repositories { google(); mavenCentral() }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.android.tools.build:gradle:7.6.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
-}
-
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
-}
+allprojects { repositories { google(); mavenCentral() } }
