--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,6 @@
 android.useAndroidX=true
 android.enableJetifier=true
+android.useAndroidX=true
+android.enableJetifier=true
+android.useAndroidX=true
+android.enableJetifier=true
