Fix Gradle, restore URL launcher, Amazon affiliate, NewsFeed, navigation, CI workflow

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
-    ext {
-        compileSdkVersion = 33
-        minSdkVersion = 21
-        targetSdkVersion = 33
-        kotlin_version = '1.9.0'
+    repositories {
+        google()
+        mavenCentral()
     }
-    repositories { google(); mavenCentral() }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.6.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-allprojects { repositories { google(); mavenCentral() } }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
