--- a/.github/workflows/build-and-upload-apk.yml
+++ b/.github/workflows/build-and-upload-apk.yml
@@ -1,18 +1,36 @@
 name: Build and Upload APK
+
 on:
-  push: {branches:[main]}
+  push:
+    branches: [ main ]
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with: {flutter-version:'3.16.9'}
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build apk --release --no-shrink
-      - uses: actions/upload-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.16.9'
+
+      - name: Ensure Gradle wrapper is correct
+        run: ./gradlew wrapper --gradle-version 8.2 --distribution-type all
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Clean previous build
+        run: flutter clean
+
+      - name: Build release APK
+        run: flutter build apk --release --no-shrink
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
         with:
           name: green-urban-grow-app
           path: build/app/outputs/flutter-apk/app-release.apk
