Fix Gradle plugin 7.4.2, wrapper 8.0.2, settings.gradle for CI build

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.5.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
