--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Flutter APK Build
+name: Build Android APK
 
 on:
   push:
@@ -9,27 +9,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      # Set up Flutter SDK
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.16.9'
 
-      # Get Dart/Flutter dependencies
-      - name: Get Dependencies
+      - name: Install dependencies
         run: flutter pub get
 
-      # Build the release APK
-      - name: Build APK
-        run: flutter build apk --release --no-shrink
+      - name: Build APK with Gradle
+        working-directory: android
+        run: ./gradlew assembleRelease
 
-      # Upload the APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: green-urban-grow-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: android/app/build/outputs/apk/release/app-release.apk
