--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,21 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "green_urban_grow"
-include ':app'
+include ":app"
+
+# Flutter plugins auto-included
+includeBuild("../.flutter-plugins")
